--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -7,6 +7,6 @@ spec:
     app: {{ .Values.system }}-{{ .Values.service }}-{{ .Values.environment }}
   ports:
     - protocol: TCP
-      port: 3000
-      targetPort: 3000
+      port: {{ .Values.port }}
+      targetPort: {{ .Values.port }}
   type: ClusterIP
